Cleaning up engine gemini interview

--- a/interviews/engine-takehome-interview/src/Makefile
+++ b/interviews/engine-takehome-interview/src/Makefile
@@ -1,14 +1,26 @@
 CC=gcc
 CFLAGS=-I. -O0 -g -Wall -std=c++17
 LDFLAGS=-lm -lstdc++
-SOURCES=main.cpp OrderProcessor.cpp OrderBook.cpp
-TESTSOURCES=OrderProcessor.cpp OrderBook.cpp Tests.cpp
-
+SOURCES=main.cpp \
+        OrderProcessor.cpp \
+        OrderBook.cpp
+TESTSOURCES=OrderProcessor.cpp \
+            OrderBook.cpp \
+            Tests.cpp
+VALGRINDFLAGS=--leak-check=full \
+              --error-exitcode=1 \
+              --tool=memcheck \
+              --track-origins=yes \
+              --errors-for-leak-kinds=definite \
+              --show-leak-kinds=definite \
+              --quiet
+              #			 $program \
+              #			 > temp.txt 2>&1
 %.o: %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
 #.PHONY: build
-build: match_engine_tests build_match_engine
+build: build_match_engine match_engine_tests valgrind
 build_match_engine: ## Kicks off a build
 	mkdir -p build
 	#clang-tidy $(CPPFLAGS) -checks=*,-fuchsia* --warnings-as-errors=* $(SOURCES) -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
@@ -17,6 +29,9 @@ build_match_engine: ## Kicks off a build
 match_engine_tests: ## Kicks off a test
 	mkdir -p build
 	$(CC) $(CFLAGS) -o build/match_engine_tests $(TESTSOURCES) $^ $(LDFLAGS)
+
+valgrind:
+	valgrind $(VALGRINDFLAGS) build/match_engine input.txt
 
 #valgrind: ## Valgrind check code
 
